deploy/k8s-manhouse/namespace.yaml
# pasta-manhouse
apiVersion: v1
kind: Namespace
metadata:
  name: pasta-manhouse
  # labels:
  #   name: pasta-manhouse
