deploy/k8s-manhouse/deployment-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: pastang-manhouse-dev
  labels:
    app: pastang-manhouse-dev
spec:
  ports:
  - port: 8080
    protocol: TCP
  type: LoadBalancer
  selector:
    app: pastang-manhouse-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastang-manhouse-dev
  labels:
    app: pastang-manhouse-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pastang-manhouse-dev
  template:
    metadata:
      labels:
        app: pastang-manhouse-dev
    spec:
      containers:
      - name: pastang-manhouse-dev
        image: palladius/pastang
