deploy/k8s-manhouse/deployment-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: pastang-manhouse-prod
  labels:
    app: pastang-manhouse-prod
spec:
  ports:
  - port: 8080
    protocol: TCP
  #clusterIP: None
  type: LoadBalancer
  selector:
    app: pastang-manhouse-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastang-manhouse-prod
  labels:
    app: pastang-manhouse-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pastang-manhouse-prod
  template:
    metadata:
      labels:
        app: pastang-manhouse-prod
    spec:
      containers:
      - name: pastang-manhouse-prod
        image: palladius/pastang
