deploy/k8s-manhouse/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastang-manhouse-ingress
#  namespace: pasta-manhouse
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: pastang-manhouse-dev
            port:
              number: 8080
      # - path: /prod
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:60000
      #       name: pastang-manhouse-prod
      #       port:
      #         number: 80
